# SunnyLand

./: .clang-format  .gitignore  .gitmodules  CHANGES.md  CMAKE_FILES_GUIDE.md  CMakeLists.txt  TEST_FRAMEWORK_SUMMARY.md  TEST_GUIDE.md  TEST_INTEGRATION_SUMMARY.md  TEST_QUICK_COMMANDS.md  format.py  format.sh
assets/: config.json
assets/maps/: level1.tmj
cmake/: CompilerOptions.cmake  Dependencies.cmake  LinkLibraries.cmake  PostBuildSteps.cmake  Sources.cmake  Tests.cmake
src/: log.cpp  log.h  main.cpp
src/engine/component/: ai_component.cpp  ai_component.h  animation_component.cpp  animation_component.h  collider_component.cpp  collider_component.h  component.h  health_component.cpp  health_component.h  parallax_component.cpp  parallax_component.h  physics_component.cpp  physics_component.h  sprite_component.cpp  sprite_component.h  tag_component.h  tilelayer_component.cpp  tilelayer_component.h  transform_component.cpp  transform_component.h
src/engine/component/ai/: ai_behavior.h  jump_behavior.cpp  jump_behavior.h  patrol_behavior.cpp  patrol_behavior.h  updown_behavior.cpp  updown_behavior.h
src/engine/core/: config.cpp  config.h  context.cpp  context.h  game_app.cpp  game_app.h  game_state.cpp  game_state.h  time.cpp  time.h
src/engine/ecs/: components.h  systems.cpp  systems.h
src/engine/ecs/component/: animation_component.h  camera_target_component.h  collider_component.h  damage_effect_component.h  health_component.h  name_component.h  parallax_component.h  pending_destroy_component.h  physics_component.h  render_order_component.h  sprite_component.h  tag_component.h  tile_info.h  tile_layer_component.h  tile_type.h  transform_component.h
src/engine/input/: input_manager.cpp  input_manager.h
src/engine/object/: game_object.cpp  game_object.h
src/engine/physics/: collider.h  collision.cpp  collision.h  physics_engine.cpp  physics_engine.h
src/engine/render/: animation.cpp  animation.h  camera.cpp  camera.h  renderer.cpp  renderer.h  sprite.h  text_renderer.cpp  text_renderer.h  texture.h
src/engine/resource/: audio_manager.cpp  audio_manager.h  font_manager.cpp  font_manager.h  resource_manager.cpp  resource_manager.h  texture_manager.cpp  texture_manager.h
src/engine/scene/: ecs_level_loader.cpp  ecs_level_loader.h  level_loader.cpp  level_loader.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
src/engine/system/: physics_engine.cpp  physics_engine.h  system.h
src/engine/ui/: ui_button.cpp  ui_button.h  ui_element.cpp  ui_element.h  ui_image.cpp  ui_image.h  ui_interactive.cpp  ui_interactive.h  ui_label.cpp  ui_label.h  ui_manager.cpp  ui_manager.h  ui_panel.cpp  ui_panel.h
src/engine/ui/state/: ui_hover_state.cpp  ui_hover_state.h  ui_normal_state.cpp  ui_normal_state.h  ui_pressed_state.cpp  ui_pressed_state.h  ui_state.h
src/engine/utils/: alignment.h  assert.h  debug.h  json_utils.h  math.h  non_copyable.h
src/game/: game_scene.cpp  game_scene.h
src/game/component/: ai_component.cpp  ai_component.h  player_component.cpp  player_component.h
src/game/component/ai/: ai_behavior.h  jump_behavior.cpp  jump_behavior.h  patrol_behavior.cpp  patrol_behavior.h  updown_behavior.cpp  updown_behavior.h
src/game/component/state/: climb_state.cpp  climb_state.h  dead_state.cpp  dead_state.h  fall_state.cpp  fall_state.h  hurt_state.cpp  hurt_state.h  idle_state.cpp  idle_state.h  jump_state.cpp  jump_state.h  player_state.cpp  player_state.h  walk_state.cpp  walk_state.h
src/game/data/: session_data.cpp  session_data.h  tile_info_resolver.h
src/game/ecs/: components.h  systems.cpp  systems.h
src/game/ecs/component/: ai_behavior_type.h  ai_component.h  effect_request.h  player_component.h  player_input_component.h  player_state.h  rule_events.h
src/game/ecs/entity/: effect_entity.cpp  effect_entity.h  enemy_entity.cpp  enemy_entity.h  item_entity.cpp  item_entity.h  player_entity.cpp  player_entity.h
src/game/scene/: end_scene.cpp  end_scene.h  game_scene.cpp  game_scene.h  helps_scene.cpp  helps_scene.h  menu_scene.cpp  menu_scene.h  title_scene.cpp  title_scene.h
src/utils/: alignment.h  assert.h  collision.h  log.cpp  log.h  math.h
test/core/: config_test.cpp  time_test.cpp
test/utils/: math_test.cpp
